z-index fix filter rating.html

--- a/assets/css/ratings.css
+++ b/assets/css/ratings.css
@@ -391,7 +391,7 @@ card img {
 
     .filters {
         padding-left: 20%;
-        z-index: 999;
+        z-index: 0;
         padding-right: 20%;
         height: 80px;
         width: 100%;
